crates/keron-lang/tests/corpus/errors/parse/struct_decl_missing_field_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `}`, expected `:`
  --> 1:26
  |
1 | struct Point { x: Int, y }
  |                          ^
